rust/adl-lsp/src/parser/snapshots/adl_lsp__parser__symbols__test__document_symbols_snapshot.snap
---
source: src/parser/symbols.rs
assertion_line: 258
expression: symbols
---
- name: sample.simple
  kind: 2
  range:
    start:
      line: 1
      character: 12
    end:
      line: 16
      character: 14
  selectionRange:
    start:
      line: 1
      character: 19
    end:
      line: 1
      character: 32
  children:
    - name: Person
      kind: 23
      range:
        start:
          line: 2
          character: 16
        end:
          line: 5
          character: 18
      selectionRange:
        start:
          line: 2
          character: 23
        end:
          line: 2
          character: 29
      children:
        - name: name
          detail: String
          kind: 8
          range:
            start:
              line: 3
              character: 20
            end:
              line: 3
              character: 32
          selectionRange:
            start:
              line: 3
              character: 27
            end:
              line: 3
              character: 31
        - name: age
          detail: Int
          kind: 8
          range:
            start:
              line: 4
              character: 20
            end:
              line: 4
              character: 28
          selectionRange:
            start:
              line: 4
              character: 24
            end:
              line: 4
              character: 27
    - name: Color
      kind: 10
      range:
        start:
          line: 7
          character: 16
        end:
          line: 11
          character: 18
      selectionRange:
        start:
          line: 7
          character: 22
        end:
          line: 7
          character: 27
      children:
        - name: red
          detail: Void
          kind: 22
          range:
            start:
              line: 8
              character: 20
            end:
              line: 8
              character: 29
          selectionRange:
            start:
              line: 8
              character: 25
            end:
              line: 8
              character: 28
        - name: green
          detail: Void
          kind: 22
          range:
            start:
              line: 9
              character: 20
            end:
              line: 9
              character: 31
          selectionRange:
            start:
              line: 9
              character: 25
            end:
              line: 9
              character: 30
        - name: blue
          detail: Void
          kind: 22
          range:
            start:
              line: 10
              character: 20
            end:
              line: 10
              character: 30
          selectionRange:
            start:
              line: 10
              character: 25
            end:
              line: 10
              character: 29
    - name: UserId
      detail: Int32
      kind: 5
      range:
        start:
          line: 13
          character: 16
        end:
          line: 13
          character: 36
      selectionRange:
        start:
          line: 13
          character: 21
        end:
          line: 13
          character: 27
    - name: Email
      detail: String
      kind: 5
      range:
        start:
          line: 15
          character: 16
        end:
          line: 15
          character: 39
      selectionRange:
        start:
          line: 15
          character: 24
        end:
          line: 15
          character: 29
