rust/adl-lsp/src/parser/snapshots/adl_lsp__parser__symbols__test__misc_v07_symbols_snapshot.snap
---
source: src/parser/symbols.rs
assertion_line: 299
expression: symbols
---
- name: test.misc
  kind: 2
  range:
    start:
      line: 0
      character: 0
    end:
      line: 11
      character: 2
  selectionRange:
    start:
      line: 0
      character: 7
    end:
      line: 0
      character: 16
  children:
    - name: Weird
      kind: 23
      range:
        start:
          line: 2
          character: 4
        end:
          line: 6
          character: 6
      selectionRange:
        start:
          line: 3
          character: 11
        end:
          line: 3
          character: 16
      children:
        - name: String
          detail: String
          kind: 8
          range:
            start:
              line: 4
              character: 8
            end:
              line: 4
              character: 22
          selectionRange:
            start:
              line: 4
              character: 15
            end:
              line: 4
              character: 21
        - name: value
          detail: Int32
          kind: 8
          range:
            start:
              line: 5
              character: 8
            end:
              line: 5
              character: 20
          selectionRange:
            start:
              line: 5
              character: 14
            end:
              line: 5
              character: 19
    - name: Count
      detail: Int32
      kind: 5
      range:
        start:
          line: 8
          character: 4
        end:
          line: 8
          character: 30
      selectionRange:
        start:
          line: 8
          character: 12
        end:
          line: 8
          character: 17
    - name: Email
      detail: String
      kind: 5
      range:
        start:
          line: 10
          character: 4
        end:
          line: 10
          character: 27
      selectionRange:
        start:
          line: 10
          character: 12
        end:
          line: 10
          character: 17
